--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <a href="https://github.com/MuizAyo6" target="_blank" aria-label="GitHub">
         <i class="fa-brands fa-github"></i>
       </a>
-      <a href="https://www.linkedin.com/in/muiz-ayomide" target="_blank" aria-label="LinkedIn">
+      <a href="https://www.linkedin.com/in/muiz-ayomide-1a95b83a1?utm_sourc=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" aria-label="LinkedIn">
         <i class="fa-brands fa-linkedin"></i>
       </a>
       <a href="https://x.com/MuizAyo6" target="_blank" aria-label="X">
